# word2nion

./: .ghci  .gitignore  CHANGELOG.md  README.md  cabal.project  default.nix  hie.yaml  setup-data  shell.nix  word2nion.cabal
app/: Main.hs
nix/: default.nix  haskell.nix  sources.json  sources.nix  stack-shell.nix
scripts/: hoogle
src/: Models.hs  Trainer.hs  Word2nion.hs
src/Models/: AutoEncoder.hs  QuaternionSelfSupervised.hs  QuaternionSelfSupervisedEffectiveComplexity.hs  Word2FinVec.hs  Word2Vec.hs
src/Torch/Streamly/: Dataloader.hs  Tokenizer.hs
src/Torch/Typed/: Entropy.hs  Quaternion.hs
